--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "node-schedule": "^2.1.0",
+    "puppeteer": "^19.2.2"
   }
 }
